Add game registration and unregistration
